--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <title>Roll the Dice!</title>
 </head>
 <body>
-    
+    <div id="game-area">
+        <table>
+            <tr>
+                <td><h1>Roll the Dice!</h1></td>
+            </tr>
+            <tr>
+                <td>
+                    <div id="player-section">
+                        <img src="#" alt="dice" style="width: 200px; height: 200px;">
+                    </div>
+                </td>
+                <td>
+                    <div id="computer-section">
+                        <img src="#" alt="dice" style="width: 200px; height: 200px;">
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
     <script src="assets/javascript/script.js"></script>
 </body>
 </html>
