--- a/index.html
+++ b/index.html
@@ -11,18 +11,28 @@
     <div id="game-area">
         <table>
             <tr>
-                <td><h1>Roll the Dice!</h1></td>
+                <td id="title" colspan="2"><h1>Roll the Dice!</h1></td>
             </tr>
-            <tr>
+            <tr id="dice-seciton">
                 <td>
                     <div id="player-section">
                         <img src="#" alt="dice" style="width: 200px; height: 200px;">
+                        <h3>Your roll: <span id = 'player-roll'>0</span></h3>
                     </div>
                 </td>
                 <td>
                     <div id="computer-section">
                         <img src="#" alt="dice" style="width: 200px; height: 200px;">
+                        <h3>Computer roll: <span id = 'computer-roll'>0</span></h3>
                     </div>
+                </td>
+            </tr id='scores'>
+            <tr>
+                <td>
+                    <h2>Games Won: <span>0</span></h2>
+                </td>
+                <td>
+                    <h2>Games lost: <span>0</span></h2>
                 </td>
             </tr>
         </table>
