add js to play game to claculate 2 dice numbers each for player and computer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </td>
             </tr>
             <tr id="command">
-                <td colspan="2"><h2><span id="command-text">your turn</span></h2></td>
+                <td colspan="2"><h2><span id="command-text">Roll your dice!</span></h2></td>
             </tr>
             <tr id="scores">
                 <td>
