--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             </tr>
             <tr id="scores">
                 <td>
-                    <h2>Games Won: <span>0</span></h2>
+                    <h2>Games Won: <span id="wins">0</span></h2>
                 </td>
                 <td>
-                    <h2>Games lost: <span>0</span></h2>
+                    <h2>Games lost: <span id="loses">0</span></h2>
                 </td>
             </tr>
         </table>
