i have began fixing the bug which was that everytime the game restarted it created new event listeners and started over incrementin event listeners and looped the game thousands of times, i have done this by only having one event listner but i have had to returcture my code completely

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </td>
                 <td>
                     <div id="computer-section">
-                        <img class='dice' data-type="computer-roll" src="assets/images/dice.png" alt="dice" style="width: 200px; height: 200px;">
+                        <img class='dice' data-type='computer-roll' src="assets/images/dice.png" alt="dice" style="width: 200px; height: 200px;">
                         <h3>Computer roll: <span id = 'computer-roll'>0</span></h3>
                     </div>
                 </td>
@@ -40,6 +40,6 @@
             </tr>
         </table>
     </div>
-    <script src="assets/javascript/script.js"></script>
+    <script src="assets/javascript/script2.js"></script>
 </body>
 </html>
