add css so that dice images display correctly on smaller screens

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <tr id="dice-seciton">
                 <td>
                     <div id="player-section">
-                        <img class='dice' data-type='player-roll' src="assets/images/dice.png" alt="dice" style="width: 200px; height: 200px;">
+                        <img class='dice' data-type='player-roll' src="assets/images/dice.png" alt="dice">
                         <h3>Your roll: <span id = 'player-roll'>0</span></h3>
                     </div>
                 </td>
                 <td>
                     <div id="computer-section">
-                        <img class='dice' data-type='computer-roll' src="assets/images/dice.png" alt="dice" style="width: 200px; height: 200px;">
+                        <img class='dice' data-type='computer-roll' src="assets/images/dice.png" alt="dice">
                         <h3>Computer roll: <span id = 'computer-roll'>0</span></h3>
                     </div>
                 </td>
