add a sub heading declaring the score limit and style it with css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <tr>
                 <td id="title" colspan="2"><h1>Roll the Dice!</h1></td>
             </tr>
+            <tr>
+                <td id="sub-title" colspan="2"><h2>(first to 5)</h2></td>
+            </tr>
             <tr id="dice-seciton">
                 <td>
                     <div id="player-section">
@@ -33,10 +36,10 @@
             </tr>
             <tr id="scores">
                 <td>
-                    <h2>Games Won: <span id="wins">4</span></h2>
+                    <h2>Games Won: <span id="wins">0</span></h2>
                 </td>
                 <td>
-                    <h2>Games lost: <span id="loses">4</span></h2>
+                    <h2>Games lost: <span id="loses">0</span></h2>
                 </td>
             </tr>
         </table>
