add html and css for game selector buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="game-area">
-        <table>
+        <table id="play-area">
             <tr>
                 <td id="title" colspan="2"><h1>Roll the Dice!</h1></td>
             </tr>
@@ -41,6 +41,13 @@
                 <td>
                     <h2>Games lost: <span id="loses">0</span></h2>
                 </td>
+            </tr>
+        </table>
+        <table id = 'tabs'>
+            <tr>
+                <td id="tab-3"><button class="tab">3</button></td>
+                <td id="tab-5"><button class="tab">5</button></td>
+                <td id="tab-7"><button class="tab">7</button></td>
             </tr>
         </table>
     </div>
