--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <td id="title" colspan="2"><h1>Roll the Dice!</h1></td>
             </tr>
             <tr>
-                <td id="sub-title" colspan="2"><h2>(first to 5)</h2></td>
+                <td id="sub-title" colspan="2">(first to 5)</td>
             </tr>
             <tr id="dice-seciton">
                 <td>
@@ -45,9 +45,9 @@
         </table>
         <table id = 'tabs'>
             <tr>
-                <td id="tab-3"><button class="tab">3</button></td>
-                <td id="tab-5"><button class="tab">5</button></td>
-                <td id="tab-7"><button class="tab">7</button></td>
+                <td id="tab-3"><button class="tab" data-type="3">3</button></td>
+                <td id="tab-5"><button class="tab" data-type="5" >5</button></td>
+                <td id="tab-7"><button class="tab" data-type="7">7</button></td>
             </tr>
         </table>
     </div>
