add css and html to style the tabs so that 5 is selected on load

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         </table>
         <table id = 'tabs'>
             <tr>
-                <td id="tab-3"><button class="tab" data-type="3">3</button></td>
-                <td id="tab-5"><button class="tab" data-type="5" >5</button></td>
-                <td id="tab-7"><button class="tab" data-type="7">7</button></td>
+                <td id="tab-3"><button class="tab grey-bg" data-type="3">3</button></td>
+                <td id="tab-5" class="red-bg"><button class="tab red-bg" data-type="5" >5</button></td>
+                <td id="tab-7"><button class="tab grey-bg" data-type="7">7</button></td>
             </tr>
         </table>
     </div>
